# sift

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  deny.toml
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml
benchsuite/: README.md  create_corpus.sh  run.sh
crates/sift-chunker/: Cargo.toml
crates/sift-chunker/src/: code.rs  error.rs  fixed.rs  lib.rs  recursive.rs  semantic.rs  traits.rs
crates/sift-cli/: Cargo.toml
crates/sift-cli/src/: color_stub.rs  main.rs  output.rs  pipeline.rs
crates/sift-cli/src/commands/: config.rs  export.rs  list.rs  mcp.rs  mod.rs  models.rs  remove.rs  scan.rs  search.rs  serve.rs  status.rs  watch.rs
crates/sift-cli/tests/: binary.rs  integration.rs  testenv.rs
crates/sift-core/: Cargo.toml
crates/sift-core/src/: config.rs  error.rs  lib.rs  pipeline.rs  types.rs  util.rs
crates/sift-embed/: Cargo.toml
crates/sift-embed/src/: cache.rs  error.rs  json_cache.rs  lib.rs  models.rs  onnx.rs  traits.rs  vision.rs
crates/sift-mcp/: Cargo.toml
crates/sift-mcp/src/: lib.rs
crates/sift-parsers/: Cargo.toml
crates/sift-parsers/src/: archive.rs  audio.rs  code.rs  data.rs  email.rs  epub.rs  error.rs  image.rs  lib.rs  notebook.rs  office.rs  pdf.rs  registry.rs  rtf.rs  skill.rs  spreadsheet.rs  text.rs  traits.rs  web.rs
crates/sift-server/: Cargo.toml
crates/sift-server/src/: lib.rs  routes.rs  watch.rs
crates/sift-sources/: Cargo.toml
crates/sift-sources/src/: filesystem.rs  lib.rs  traits.rs
crates/sift-store/: Cargo.toml
crates/sift-store/benches/: vector_search.rs
crates/sift-store/src/: bm25.rs  error.rs  flat.rs  fts5.rs  hnsw.rs  hybrid.rs  json_metadata.rs  lib.rs  metadata.rs  tantivy_store.rs  test_utils.rs  traits.rs
docs/performance/: 01-single-pass-file-discovery.md  02-parallel-directory-walking.md  03-simd-cosine-similarity.md  04-batch-metadata-queries.md  05-sqlite-write-batching.md  06-global-allocator.md  07-benchsuite.md  INDEX.md
docs/quality/: 01-error-handling.md  02-type-duplication.md  03-hot-path-allocations.md  04-pipeline-bottlenecks.md  05-atomicity-and-safety.md  06-api-simplification.md  07-testing-gaps.md  INDEX.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_csv.rs  fuzz_semantic_chunker.rs
pkg/brew/: sift-bin.rb
pkg/windows/: Manifest.xml  README.md
