[workspace]
resolver = "2"
members = [
    "crates/sift-core",
    "crates/sift-sources",
    "crates/sift-parsers",
    "crates/sift-chunker",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
anyhow = "1"
thiserror = "2"
blake3 = "1"

# File processing
walkdir = "2"
ignore = "0.4"
infer = { version = "0.16", default-features = false, features = ["alloc"] }

# Document parsing
pdf-extract = "0.10"
zip = { version = "2.2", default-features = false, features = ["deflate-flate2", "flate2"] }
calamine = "0.33"
mail-parser = "0.9"
tar = "0.4"
flate2 = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
csv = "1"

# Audio processing
symphonia = { version = "0.5", features = ["mp3", "flac", "pcm", "isomp4", "aac"] }
symphonia-core = "0.5"

# Tree-sitter (AST-aware code chunking)
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-java = "0.23"

# Text processing
unicode-segmentation = "1"

# Testing
tempfile = "3"

# Internal crates
sift-core = { path = "crates/sift-core" }

[profile.dev.package."*"]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
