[package]
name = "sift-chunker"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = ["ast"]
ast = ["ast-all"]
ast-all = ["ast-rust", "ast-python", "ast-javascript", "ast-typescript", "ast-go", "ast-c", "ast-java"]
ast-rust = ["dep:tree-sitter", "dep:tree-sitter-rust"]
ast-python = ["dep:tree-sitter", "dep:tree-sitter-python"]
ast-javascript = ["dep:tree-sitter", "dep:tree-sitter-javascript"]
ast-typescript = ["dep:tree-sitter", "dep:tree-sitter-typescript"]
ast-go = ["dep:tree-sitter", "dep:tree-sitter-go"]
ast-c = ["dep:tree-sitter", "dep:tree-sitter-c"]
ast-java = ["dep:tree-sitter", "dep:tree-sitter-java"]

[dependencies]
sift-core = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
unicode-segmentation = { workspace = true }
tree-sitter = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-javascript = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }
tree-sitter-go = { workspace = true, optional = true }
tree-sitter-c = { workspace = true, optional = true }
tree-sitter-java = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
