[package]
name = "sift-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "sift"
path = "src/main.rs"

[features]
default = ["fts5", "sqlite", "documents", "data-formats", "archive", "fancy"]
# Coarse feature groups
documents = ["pdf", "office", "epub"]
data-formats = ["spreadsheets", "data"]
ast = ["sift-chunker/ast"]
# Fine-grained AST language features (prefer `ast` for all languages)
ast-rust = ["sift-chunker/ast-rust"]
ast-python = ["sift-chunker/ast-python"]
ast-javascript = ["sift-chunker/ast-javascript"]
ast-typescript = ["sift-chunker/ast-typescript"]
ast-go = ["sift-chunker/ast-go"]
ast-c = ["sift-chunker/ast-c"]
ast-java = ["sift-chunker/ast-java"]
# Parsers
pdf = ["sift-parsers/pdf"]
spreadsheets = ["sift-parsers/spreadsheets"]
email = ["sift-parsers/email"]
office = ["sift-parsers/office"]
epub = ["sift-parsers/epub"]
archive = ["sift-parsers/archive"]
data = ["sift-parsers/data"]
audio = ["sift-parsers/audio"]
# Embedding & search
embeddings = ["dep:sift-embed", "sift-mcp?/embeddings"]
vision = ["embeddings", "sift-embed/vision"]
fulltext = ["sift-store/fulltext", "sift-mcp?/fulltext"]
fts5 = ["sift-store/fts5", "sift-mcp?/fts5"]
sqlite = ["sift-store/sqlite", "sift-embed?/sqlite", "sift-mcp?/sqlite"]
hnsw = ["sift-store/hnsw", "sift-mcp?/hnsw"]
simd = ["sift-store/simd"]
# Server & UI
serve = ["dep:sift-server", "dep:tokio"]
mcp = ["dep:sift-mcp", "dep:tokio"]
completions = ["dep:clap_complete"]
fancy = ["dep:indicatif", "dep:colored"]
# Profiles
standard = ["ast", "documents", "data-formats", "email", "archive", "fts5", "sqlite", "embeddings", "fancy"]
full = ["standard", "serve", "mcp", "hnsw", "fulltext", "vision", "audio", "simd", "completions"]

[dependencies]
sift-core = { workspace = true }
sift-sources = { workspace = true }
sift-parsers = { workspace = true, default-features = false }
sift-chunker = { workspace = true, default-features = false }
sift-embed = { workspace = true, default-features = false, optional = true }
sift-store = { workspace = true, default-features = false }
sift-server = { workspace = true, optional = true }
sift-mcp = { workspace = true, optional = true }

clap = { workspace = true }
clap_complete = { workspace = true, optional = true }
indicatif = { workspace = true, optional = true }
colored = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }
rayon = { workspace = true }
crossbeam-channel = { workspace = true }
ctrlc = { workspace = true }
fs4 = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
uuid = { workspace = true }
