[package]
name = "sift-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = ["fts5", "sqlite"]
sqlite = ["sift-store/sqlite"]
fts5 = ["sqlite", "sift-store/fts5"]
fulltext = ["sift-store/fulltext"]
hnsw = ["sift-store/hnsw"]
embeddings = ["dep:sift-embed"]

[dependencies]
sift-core = { workspace = true }
sift-store = { workspace = true, default-features = false }
sift-parsers = { workspace = true, default-features = false }
sift-embed = { workspace = true, default-features = false, optional = true }

rmcp = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
